--- a/_data/share.yml
+++ b/_data/share.yml
@@ -21,20 +21,12 @@ platforms:
     type: Telegram
     icon: "fab fa-telegram"
     link: "https://telegram.me/share?text=TITLE&url=URL"
-  -
-    type: Whatsapp
-    icon: "fab fa-whatsapp"
-    link: "https://api.whatsapp.com/send?text=URL"
-  -
-    type: Pinterest
-    icon: "fab fa-pinterest"
-    link: "https://pinterest.com/pin/create/button/?url=URL"
-  -
-    type: Linkedin
-    icon: "fab fa-linkedin"
-    link: "https://www.linkedin.com/sharing/share-offsite/?url=URL"
 
   # Uncomment below if you need to.
+  # -
+  #   type: Linkedin
+  #   icon: "fab fa-linkedin"
+  #   link: "https://www.linkedin.com/sharing/share-offsite/?url=URL"
   #
   # -
   #   type: Weibo
