--- a/_data/label.yml
+++ b/_data/label.yml
@@ -6,12 +6,12 @@
 
 
 panel:
-  lastmod: "Recent Update"
+  lastmod: "Recent Post"
   trending_tags: "Trending Tags"
   toc: "Contents"
 
 post:
-  relate_posts: "Further Reading"
+  relate_posts: "Relate Posts"
   button:
     next: Newer
     previous: Older
