--- a/_config.yml
+++ b/_config.yml
@@ -58,11 +58,11 @@ google_analytics:
   pv:
     # The Google Analytics pageviews switch.
     # DO NOT enable it unless you know how to deploy the Google Analytics superProxy.
-    enabled: false
+    enabled: true
     # the next options only valid when `google_analytics.pv` is enabled.
     proxy_url: ''
     proxy_endpoint: ''
-    cache: false  # pv data local cache, good for the users from GFW area.
+    cache: true  # pv data local cache, good for the users from GFW area.
 
 disqus:
   comments: true  # boolean type, the global switch for posts comments.
